2003-04-12  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* Makefile.am: add -no-undefined to libIDL_2_la_LDFLAGS.
	
	* IDL.h.new.in, tstidl.c: use G_PLATFORM_WIN32 and G_OS_WIN32
	instead of _WIN32.

	* configure.in: add AC_LIBTOOL_WIN32_DLL call and check for
	unistd.h, popen(), symlink() and access().

	* util.c, util.h: use HAVE_UNISTD_H, HAVE_POPEN, HAVE_SYMLINK and
	HAVE_ACCESS instead of _WIN32, NO_POPEN, NO_SYMLINK and NO_ACCESS.

2002-10-17  Mark McLoughlin  <mark@skynet.ie>

	* Makefile.am: don't distribute built sources.
	Hopefully this fixes #88977, there's no point
	in distributing these anymore since we now
	require flex.

	* configure.in: remove warning about not having
	flex. We error out earlier if we don't have flex.

	* libIDL-config.in: rename to libIDL-config-2.in
	and only distribute libIDL-config-2.

	* libIDLConf.sh.in: kill this cruft.

2002-09-20  Mark McLoughlin  <mark@skynet.ie>

	* libIDL-config.in: use pkg-config --(libs|cflags) glib-2.0.
	instead of glib-config. The script is still going to go
	away at soe stage though :-)
	Patch from john.sun@sun.com and Jay Yan <jay.yan@sun.com>,
	Fixes #93496.

2002-09-09  Mark McLoughlin  <mark@skynet.ie>

	* libIDL-config.in: s/-lIDL/-lIDL-2/. This script
	should be removed by rights.

2002-08-27  Thomas Vander Stichele <thomas@apestaart.org>

  	* configure.in: make failures to find a usable flex and yacc
          critical 

2002-08-18  Havoc Pennington  <hp@pobox.com>

	* autogen.sh: hardcode aclocal-1.4/automake-1.4 so that users with
	both automake 1.6 and 1.4 installed get the right automake. Means
	compilation from CVS will now require the latest automake 1.4
	release, or manually creating symlinks called "automake-1.4" and
	"aclocal-1.4"

2002-06-06  jacob berkman  <jacob@ximian.com>

	* IDL.h.new.in: 
	* configure.in: use %q rather than %ll on bsd (fixes bug #80439)

2002-06-03  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: Version 0.8.0.
